jobs/job_60783810/uncert/errors/benchmark_634/solver_2.txt
INFO: Pointer analysis took 0 sec 110 ms
src/aso.bug1.c:157:26: error: use of undeclared identifier 'pwm_l'
  nxt_motor_set_speed(0, pwm_l, 1);
                         ^
src/aso.bug1.c:158:26: error: use of undeclared identifier 'pwm_r'
  nxt_motor_set_speed(1, pwm_r, 1);
                         ^
2 errors generated.
aso.bug1.o:1:9: warning: unknown pragma ignored [-Wunknown-pragmas]
#pragma merger(0,"/tmp/aaaa/aso.bug1.i","-S")
        ^
src/startrek.h:26:38: warning: unused label 'ERROR' [-Wunused-label]
void assert(_Bool arg) { if (!arg) { ERROR: __VERIFIER_error();} }
                                     ^~~~~~~
src/aso.bug1.c:64:40: warning: unused parameter 'port' [-Wunused-parameter]
char nxt_motor_get_count(unsigned char port ) 
                                       ^
src/aso.bug1.c:79:52: warning: unused parameter 'port' [-Wunused-parameter]
unsigned int ecrobot_get_gyro_sensor(unsigned char port ) 
                                                   ^
src/aso.bug1.c:85:75: warning: unused parameter 'sz' [-Wunused-parameter]
void ecrobot_read_bt_packet(unsigned char *bt_receive_buf , unsigned char sz ) 
                                                                          ^
src/aso.bug1.c:157:26: error: use of undeclared identifier 'pwm_l'
  nxt_motor_set_speed(0, pwm_l, 1);
                         ^
src/aso.bug1.c:158:26: error: use of undeclared identifier 'pwm_r'
  nxt_motor_set_speed(1, pwm_r, 1);
                         ^
src/aso.bug1.c:170:54: warning: unused parameter 'port' [-Wunused-parameter]
unsigned char ecrobot_get_sonar_sensor(unsigned char port ) 
                                                     ^
6 warnings and 2 errors generated.
